--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,3 @@
 <resources>
-    <string name="app_name">proyecto_Francisco_Marquez</string>
+    <string name="app_name">RickyMorty</string>
 </resources>
